# envy

./: .gitignore  Cargo.toml  LICENSE  README.md  devy.yml  secrets.ejson
.github/workflows/: ci.yml  integration.yml  release.yml
src/: cli.rs  config.rs  error.rs  lock.rs  main.rs  output.rs  secrets.rs  test_support.rs
src/commands/: check.rs  down.rs  exec.rs  export.rs  hook.rs  init.rs  list_commands.rs  mod.rs  pr.rs  service.rs  shared.rs  status.rs  up.rs
src/env_manager/: mod.rs  shadowenv.rs
src/modules/: bun.rs  crystal.rs  dart.rs  deno.rs  dotnet.rs  elasticsearch.rs  elixir.rs  erlang.rs  gcloud.rs  generic.rs  helpers.rs  java.rs  kafka.rs  kotlin.rs  mailhog.rs  mariadb.rs  meilisearch.rs  memcached.rs  minio.rs  mod.rs  mongodb.rs  mysql.rs  nginx.rs  node.rs  opensearch.rs  postgres.rs  python.rs  rabbitmq.rs  redis.rs  ruby.rs  rust.rs  typescript.rs  vault.rs  zig.rs
src/package_manager/: apt.rs  brew.rs  mod.rs  nix.rs  winget.rs
tests/: cli.rs
