[package]
name = "devy"
version = "0.2.0"
edition = "2024"
description = "A developer environment manager — install dependencies and configure env vars from a single devy.yml"
license = "MIT"
readme = "README.md"
repository = "https://github.com/blakfeld/envy"

[[bin]]
name = "devy"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
anyhow = "1"
which = "6"
colored = "2"
ureq = { version = "2", features = ["json"] }
mutants = "0.0.3"

[package.metadata.mutants]
exclude_globs = ["src/package_manager/**"]
