[package]
name = "devy"
version = "0.3.0"
edition = "2024"
description = "A developer environment manager — install dependencies and configure env vars from a single devy.yml"
license = "MIT"
readme = "README.md"
repository = "https://github.com/blakfeld/devy"

[[bin]]
name = "devy"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yml = "0.0.12"
anyhow = "1"
which = "6"
colored = "2"
ureq = { version = "2", features = ["json"] }
serde_json = "1"
fs2 = "0.4"

[dev-dependencies]
mutants = "0.0.3"

[package.metadata.mutants]
exclude_globs = ["src/package_manager/**"]
